--- a/Front/index.html
+++ b/Front/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-R-8">
-    <title>Test del Físico Remoto</title>
-    <style>body { font-family: sans-serif; text-align: center; }</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Physics on AutoPilot - Resultados del Análisis</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Incluiremos la librería Chart.js para graficar -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Prueba de la Tubería de CI/CD</h1>
-    <p>Si ves un histograma abajo, ¡la automatización funciona!</p>
+    <div class="container">
+        <header>
+            <h1>Resultados del Análisis de Física</h1>
+            <p>Visualización de la masa invariante de 4 leptones</p>
+        </header>
 
-    <img src="histograma_masa.png" alt="Histograma de prueba">
+        <main>
+            <div class="controls">
+                <h2>Seleccionar Período:</h2>
+                <div id="period-selector" class="period-buttons">
+                    <!-- Los botones de los períodos se insertarán aquí con JavaScript -->
+                    <p class="loading-text">Cargando períodos disponibles...</p>
+                </div>
+            </div>
+
+            <div class="chart-container">
+                <div id="chart-info">
+                    <!-- La información del período (Lumi, etc.) se mostrará aquí -->
+                </div>
+                <canvas id="analysis-chart"></canvas>
+            </div>
+        </main>
+
+        <footer>
+            <p>Proyecto Physics on AutoPilot &copy; 2025</p>
+        </footer>
+    </div>
+
+    <!-- Nuestro script para la lógica de la aplicación -->
+    <script src="app.js"></script>
 </body>
 </html>
